# RustQIP

./: .gitignore  Cargo.toml  LICENSE  README.md  coverage.sh  rust-toolchain.toml
benches/: circuit_bench.rs  feynman_bench.rs  state_bench.rs
examples/: README.md  bell_inequalities.rs  cswap.rs  dense_coding.rs  deutsch.rs  deutsch_jozsa.rs  grovers.rs  manual_teleport.rs  optimizer_example.rs  side_channel_teleport.rs  simon.rs  simple.rs  teleport.rs
qip/: Cargo.toml
qip-iterators/: Cargo.toml
qip-iterators/benches/: matmul_bench.rs
qip-iterators/src/: lib.rs  matrix_ops.rs  utils.rs
qip-iterators/src/iterators/: iterator_mapper.rs  ops.rs  qubit_iterators.rs  qubit_multi_iterator.rs
qip-macros/: Cargo.toml
qip-macros/src/: lib.rs
qip-program/: Cargo.toml
qip-program/src/: lib.rs
qip-types/: Cargo.toml
qip-types/src/: lib.rs
qip/benches/: state_bench.rs
qip/examples/: bell_inequalities.rs  cswap.rs  dense_coding.rs  deutch.rs  grovers.rs  inverse_example.rs  macro_example.rs  optimizer_example.rs  simon.rs  simple.rs
qip/src/: builder.rs  builder_traits.rs  circuit.rs  conditioning.rs  errors.rs  inverter.rs  lib.rs  qasm.rs  qfft.rs  types.rs  utils.rs
qip/src/boolean_circuits/: arithmetic.rs  mod.rs
qip/src/macros/: inverter.rs  mod.rs  program.rs  program_ops.rs  wrap_function.rs
qip/src/optimizer/: index_trie.rs  mc_optimizer.rs  mod.rs
qip/src/rayon_helper/: mod.rs
qip/src/state_ops/: matrix_ops.rs  measurement_ops.rs  mod.rs
qip/src/state_ops/iterators/: iterator_mapper.rs  ops.rs  par_iterator_act.rs  qubit_multi_iterator.rs
src/: boolean_circuits.rs  builder.rs  builder_traits.rs  builders.rs  common_circuits.rs  conditioning.rs  errors.rs  lib.rs  main.rs  measurement_ops.rs  operators.rs  pipeline.rs  pipeline_debug.rs  qfft.rs  qip.rs  qubit_chainer.rs  qubit_iterators.rs  qubits.rs  state_ops.rs  types.rs  unitary_decomposition.rs  utils.rs
src/boolean_circuits/: arithmetic.rs  classical_circuits.rs  mod.rs
src/feynman_state/: memoization.rs  mod.rs  state.rs
src/iterators/: iterator_mapper.rs  mod.rs  ops.rs  par_iterator_act.rs  qubit_iterators.rs  qubit_multi_iterator.rs
src/macros/: common_ops.rs  inverter.rs  mod.rs  program.rs  program_ops.rs  register_expression.rs
src/optimizer/: index_trie.rs  mc_optimizer.rs
src/qip/: lib.rs  measurement_ops.rs  mod.rs  multi_ops.rs  operators.rs  pipeline.rs  pipeline_debug.rs  qfft.rs  qubit_iterators.rs  qubits.rs  state_ops.rs  types.rs  utils.rs
src/rayon_helper/: mod.rs
src/sparse_state/: mod.rs  state.rs  utils.rs
src/state_ops/: matrix_ops.rs  measurement_ops.rs
src/state_ops/iterators/: mod.rs  ops.rs  qubit_iterators.rs
src/trace_state/: mod.rs  state.rs
src/transpilation/: gatesets.rs  mod.rs  traits.rs
src/unitary_decomposition/: bit_pathing.rs  circuit.rs  decomposition.rs  mod.rs  test_utils.rs  utils.rs
tests/: basic_gates.rs  basis_measure.rs  cswap.rs  cswap_test.rs  dense_coding.rs  dense_coding_test.rs  entanglement.rs  offsets_test.rs  sidechannel.rs  sidechannel_tests.rs  teleport.rs  teleport_test.rs  toffoli.rs  utils.rs
