[package]
name = "qip"
version = "0.14.0"
authors = ["Sumner Hearth <sumnernh@gmail.com>"]
description = "A library for efficient quantum computing simulations."
repository = "https://github.com/Renmusxd/RustQIP"
license = "MIT"
edition = "2018"

[lib]
name = "qip"

[features]
default = ["parallel"]
parallel = ["rayon"]

[dependencies]
num = "^0.2"
rand = "^0.7"
rayon = {version = "^1.3", optional = true }

[dev-dependencies]
bencher = "^0.1"

[[bench]]
name = "state_bench"
harness = false

[[bench]]
name = "circuit_bench"
harness = false

[[bench]]
name = "feynman_bench"
harness = false