[package]
name = "qip-iterators"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "qip_iterators"

[features]
default = ["parallel"]
parallel = ["rayon"]

[dependencies]
num-traits = "^0.2"
rayon = { version = "^1.7", optional = true }

[dependencies.qip-types]
path = "../qip-types"

[dev-dependencies]
num-complex = "^0.4"