[package]
name = "qip-iterators"
version = "1.4.0"
authors = ["Sumner Hearth <sumnernh@gmail.com>"]
description = "Iterators for tensor product matrix multiplication"
repository = "https://github.com/Renmusxd/RustQIP"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "qip_iterators"

[features]
default = ["parallel"]
parallel = ["rayon"]

[dependencies]
num-traits = "^0.2"
rayon = { version = "^1.7", optional = true }

[dev-dependencies]
num-complex = "^0.4"
blas = "^0.22"
openblas-src = "^0.10"
sprs = "^0.11"
faer-core = "^0.9"

[dev-dependencies.ndarray]
version = "^0.15"
features = ["blas"]
