[package]
name = "qip-types"
version = "1.0.0"
authors = ["Sumner Hearth <sumnernh@gmail.com>"]
description = "A library of types for Matrix Processing"
repository = "https://github.com/Renmusxd/RustQIP"
license = "MIT"
edition = "2021"

[lib]
name = "qip_types"

[dependencies]
num-rational = "^0.4"
num-traits = "^0.2"
num-complex = "^0.4"
