[package]
name = "qip"
version = "1.4.0"
authors = ["Sumner Hearth <sumnernh@gmail.com>"]
description = "A library for efficient quantum computing simulations."
repository = "https://github.com/Renmusxd/RustQIP"
license = "MIT"
edition = "2021"

[lib]
name = "qip"

[features]
default = ["parallel"]
parallel = ["rayon", "qip-iterators/parallel"]
macros = ["qip-macros"]
boolean_circuits = ["macros"]

[dependencies]
num-rational = "^0.4"
num-traits = "^0.2"
num-complex = "^0.4"
rayon = { version = "^1.7", optional = true }
rand = "^0.8"
smallvec = "^1.10"

[dependencies.qip-macros]
version = "1.0.0"
path = "../qip-macros"
optional = true

[dependencies.qip-iterators]
version = "1.4.0"
path = "../qip-iterators"
